fix: V-001 security vulnerability
Automated security fix generated by Orbis Security AI